syntax = "proto3";

package v1.aspbv1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message CreateAnimeSerieServerRequest {
  int64 episodeID = 1;
}

message CreateAnimeSerieServerResponse {
  int64                     episodeID = 1;
  int64                     serverID  = 2;
  google.protobuf.Timestamp createdAt = 3;
}
